@@ -49,6 +49,8 @@
 
 package com.openexchange.sessiond.impl;
 
+import java.util.List;
+
 /**
  * SessionConfig
  *
@@ -94,5 +96,12 @@ public interface SessiondConfigInterface {
      * @return The obfuscation key
      */
     String getObfuscationKey();
+
+    /**
+     * Gets the names of such parameters that are supposed to be taken over from session to stored session representation.
+     *
+     * @return The parameter names
+     */
+    List<String> getRemoteParameterNames();
 
 }
